2008-01-04  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.
2007-12-22  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* Makefile.am: Added pt_BR to DOC_LINGUAS.
	* pt_BR/pt_BR.po: Added Brazilian Portuguese translation by Vladimir
	Melo.

2007-11-27  Gil Forcada  <gforcada@svn.gnome.org>

	* ca/ca.po: Added Catalan translation by Joan Duran.
	* ca/figures/*.png: Added screenshots for Catalan translation.
	* Makefile.am: Added ca to DOC_LINGUAS.

2007-08-22  Claude Paroz  <claude@2xlibre.net>

	* Makefile.am: Added fr to DOC_LINGUAS.
	* fr/fr.po: Added French translation by Bruno Bouard.
	* fr/figures/*.png: Added French screenshots.

2007-07-23  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation.
	* es/figures/*.png: Updated screenshots.

2007-07-22  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation.

2007-07-19  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation.

2007-06-15  Kim Christensen <kingudk@gmail.com>

	* C/gnome-sudoku.xml: Corrected shortcut for hint in help. Fixes #447357.

2007-06-02  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Added initial Spanish translation.
        * Makefile.am: Added es to DOC_LINGUAS
        * es/figures/*.png: Added screenshots.

2007-04-30  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS

2007-04-26  Claude Paroz  <claude@2xlibre.net>

	* C/gnome-sudoku.xml: Corrected DocBook syntax to make the document
	validate.
	Fixes bug #406816.

2006-11-02  Joachim Noreiko  <jnoreiko@yahoo.com>

  * Created ChangeLog for help/ pending migration to gnome-doc-utils
  * C/gnome-sudoku.xml:
    remove version number from title
    replaced deprecated ghelp:gnome-feedback link with user guide link