@@ -189,7 +189,7 @@
 
     <sect2 id="myapp-start">
     <title>To Start &app;</title>
-    <para>You can start <application>&app;</application> in the following ways:
+    <para>You can start &app; in the following ways:
     </para> 
     <variablelist>
     	<varlistentry>
@@ -205,7 +205,7 @@
     	<varlistentry>
     		<term>Command line</term>
     		<listitem>
-    		<para>To start <application>&app;</application> from a command line, type the following command, 
+    		<para>To start &app; from a command line, type the following command, 
     		then press <keycap>Return</keycap>:</para>
     		<para> 
 			<command>gnome-sudoku</command> 
@@ -219,7 +219,7 @@
     <title>When You Start &app;</title>
     <para>
 
-    When you start <application>&app;</application>, a puzzle will be
+    When you start &app;, a puzzle will be
     displayed. If it is your first time playing, you will begin with
     an easy puzzle by default. If it is not your first time playing,
     the game will open to the last puzzle you were working on by
