@@ -1,3 +1,8 @@
+2008-01-06  Andreas Røsdal <andreasr@gnome.org>
+
+	* C/gnome-sudoku.xml: Removes duplicate application tag in documentation. 
+	Fixes #507358.
+
 2008-01-04  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Updated Spanish translation
